[package]
name = "dx12"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]

[dependencies]
clap = "^2.32"
log = "^0.4"
fern = "^0.5"
termcolor = "^1.0"
wio = "^0.2"

[dependencies.winapi]
version = "0.3.6"
features = [
    "basetsd",
    "debug",
    "debugapi",
    "d3d12",
    "d3d12sdklayers",
    "d3d12shader",
    "d3dcommon",
    "d3dcompiler",
    "dxgi1_2",
    "dxgi1_3",
    "dxgi1_4",
    "dxgidebug",
    "dxgiformat",
    "dxgitype",
    "handleapi",
    "minwindef",
    "synchapi",
    "unknwnbase",
    "winbase",
    "windef",
    "winerror",
    "winnt",
    "winuser",
]

[replace]
# We add #[debug] to some structs.
"winapi:0.3.6" = { path = "../winapi-rs" }
